# security-misconfiguration-scanner

./: .coveragerc  .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  batch_scan.py  docker-compose.ci.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-scraper.txt  requirements.txt  security_headers.py  ssl_classifier.py  urls.txt
.github/workflows/: ci.yml
app/: .env.example  .gitignore  README.md  alembic.ini  requirements.txt
app/app/: __init__.py  main.py
app/migrations/: README  env.py
app/tests/: conftest.py  test_auth.py  test_health.py  test_scan_routes.py
commands/: check_scan_status.txt  download_pdf.txt  login.txt  register_user.txt  run_scrape.txt  scan_job.txt
docker/: .env.example  Dockerfile  Dockerfile.playwright  docker-compose.ci.yml  docker-compose.yml
docs/: api.md  architecture.md  security_misconfiguration_scanner_learning_guide.html  security_misconfiguration_scanner_learning_guide.md  setup.md
examples/: dynamic_products.html
scanner/: __init__.py  __main__.py  cli.py  formatters.py  headers.py  http_client.py  models.py  runner.py  serializers.py  url_fetcher.py  validators.py
scanner/checks/: exposure.py
scripts/: run_integration.sh  scrape_dynamic.py
security_scanner/: __init__.py  __main__.py  cli.py  exceptions.py  formatters.py  header_checks.py  http_client.py  logging_config.py  main.py  models.py  runner.py  serializers.py  ssl_utils.py  url_fetcher.py  url_utils.py  validators.py
security_scanner/app/: README.md  main.py
security_scanner/checks/: __init__.py  exposure.py
security_scanner/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
security_scanner/crud/: __init__.py  scan.py  scraped_job.py
security_scanner/db/: __init__.py  session.py
security_scanner/models/: __init__.py  finding.py  scan.py  scan_record.py  scraped_job.py  user.py
security_scanner/reporting/: __init__.py  exporters.py  formatters.py  pdf_generator.py  risk.py
security_scanner/repositories/: __init__.py  users.py
security_scanner/scanner/: __init__.py  http_client.py  remediation.py  runner.py  scoring.py
security_scanner/scanners/: __init__.py  security_headers.py
security_scanner/schemas/: __init__.py  auth.py  reports.py  scans.py  scrape.py  scraped_job.py
security_scanner/scraper/: __init__.py  models.py  playwright_scraper.py
security_scanner/scraping/: __init__.py  exporters.py  models.py  playwright_scraper.py
security_scanner/services/: __init__.py  exceptions.py  scan_job_store.py  scan_runner.py  scan_service.py  scans.py  scraping_service.py
security_scanner/tasks/: __init__.py  scan_tasks.py
security_scanner/utils/: __init__.py  ssl_utils.py  url_fetcher.py  url_utils.py  validators.py
src/misconfig_scanner/: __init__.py  demo.py  models.py  scanner.py
src/security_misconfiguration_scanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auth.py  test_cli.py  test_dynamic_scraping.py  test_exposure_checks.py  test_formatters.py  test_header_checks.py  test_http_client.py  test_logging_config.py  test_main.py  test_models.py  test_package_exports.py  test_pyproject.py  test_runner.py  test_serializers.py  test_ssl_utils.py  test_url_fetcher.py  test_url_utils.py  test_validators.py
tests/api/: test_scan_errors.py  test_scans.py  (+1 more)
(+97 files in other folders)
