[project]
name = "security-misconfiguration-scanner"
version = "0.1.0"
description = "Python security misconfiguration scanner portfolio project."
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "bcrypt==4.0.1",
    "cryptography>=46.0.5",
    "fastapi[standard]",
    "httpx>=0.27.0",
    "passlib[bcrypt]==1.7.4",
    "playwright>=1.60.0",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "reportlab",
    "SQLAlchemy",
    "starlette<1.0",
]

[project.scripts]
security-scanner = "security_scanner.cli:main"

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
